--- a/src/app/features/crear-modificar-servicio/crear-modificar-servicio.component.html
+++ b/src/app/features/crear-modificar-servicio/crear-modificar-servicio.component.html
@@ -64,9 +64,13 @@
 						</td>
 					</ng-container>
 					<ng-container matColumnDef="acciones">
-						<th mat-header-cell *matHeaderCellDef>Acciones</th>
+						<th mat-header-cell *matHeaderCellDef>Seleccionar ficha</th>
 						<td mat-cell *matCellDef="let element">
-							{{ element.idTipoProducto.idCategoria.descripcion }}
+							<mat-radio-group aria-label="Select an option" [(ngModel)]="selectedFicha" [ngModelOptions]="{
+								standalone: true
+							}">
+								<mat-radio-button [value]="element.idFichaClinica"></mat-radio-button>
+							  </mat-radio-group>
 						</td>
 					</ng-container>
 
@@ -190,5 +194,5 @@
 </div>
 <div mat-dialog-actions>
 	<button mat-button (click)="onNoClick()">Cancelar</button>
-	<button mat-button (click)="modificarServicio()" cdkFocusInitial>{{isEdit?"Modificar":"Agregar"}}</button>
+	<button mat-button (click)=modificarServicio() cdkFocusInitial>{{isEdit?"Modificar":"Agregar"}}</button>
 </div>
