--- a/src/app/features/servicio/pages/listar-servicio/listado-servicio.component.html
+++ b/src/app/features/servicio/pages/listar-servicio/listado-servicio.component.html
@@ -119,6 +119,8 @@
         <td mat-cell *matCellDef="let element">
           <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="edit"
             (click)="openDialog(true,element)"></mat-icon>
+			<mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="delete"
+            (click)="deleteServicio(element)"></mat-icon>
         </td>
       </ng-container>
 
